Added Vigenere-like algorithm to decrypt poem ciphered with salsa20 without nonce. Deleted Salsa20 class.

--- a/Bonus Task/Bonus Task.csproj
+++ b/Bonus Task/Bonus Task.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PositionLetterCounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Salsa20.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
