--- a/Decryption/Decryption.csproj
+++ b/Decryption/Decryption.csproj
@@ -51,6 +51,7 @@
     <Compile Include="LetterCounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proto4Task\DictionaryNGrams.cs" />
     <Compile Include="SubstitutionDecript\CipherFitness.cs" />
     <Compile Include="SubstitutionDecript\DictionaryStatisticsHelper.cs" />
     <Compile Include="SubstitutionDecript\Gen.cs" />
@@ -62,6 +63,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Proto4Task\Words Frequency.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
